[package]
name = "microsoft-webui-wasm"
description = "WebAssembly bindings for WebUI framework — powers the online playground"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file = "../../LICENSE"
repository.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "webui_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
microsoft-webui-parser = { path = "../webui-parser", default-features = false }
microsoft-webui-handler = { path = "../webui-handler" }
microsoft-webui-protocol = { path = "../webui-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[dev-dependencies]
microsoft-webui-test-utils = { path = "../webui-test-utils" }
