[package]
name = "microsoft-webui-wasm"
description = "WebAssembly bindings for WebUI framework — powers the online playground"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["webui", "wasm", "webassembly", "ssr", "rendering"]
categories = ["wasm", "web-programming"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "webui_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
microsoft-webui-parser = { path = "../webui-parser", version = "0.0.3", default-features = false }
microsoft-webui-handler = { path = "../webui-handler", version = "0.0.3" }
microsoft-webui-protocol = { path = "../webui-protocol", version = "0.0.3" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[dev-dependencies]
microsoft-webui-test-utils = { path = "../webui-test-utils", version = "0.0.3" }
