[package]
name = "microsoft-webui"
description = "Programmatic API for the WebUI build-time rendering framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "webui"

[features]
cli = ["microsoft-webui-parser/cli"]

[dependencies]
microsoft-webui-parser = { path = "../webui-parser", version = "0.0.1" }
microsoft-webui-protocol = { path = "../webui-protocol", version = "0.0.1" }
microsoft-webui-handler = { path = "../webui-handler", version = "0.0.1" }
microsoft-webui-discovery = { path = "../webui-discovery", version = "0.0.1" }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
microsoft-webui-handler = { path = "../webui-handler", version = "0.0.1" }
microsoft-webui-protocol = { path = "../webui-protocol", version = "0.0.1" }

[[bench]]
name = "contact_book_bench"
harness = false
