[package]
name = "microsoft-webui"
description = "Programmatic API for the WebUI build-time rendering framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "webui"

[features]
cli = ["microsoft-webui-parser/cli"]

[dependencies]
microsoft-webui-parser = { path = "../webui-parser" }
microsoft-webui-protocol = { path = "../webui-protocol" }
microsoft-webui-handler = { path = "../webui-handler" }
microsoft-webui-discovery = { path = "../webui-discovery" }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
microsoft-webui-handler = { path = "../webui-handler" }
microsoft-webui-protocol = { path = "../webui-protocol" }

[[bench]]
name = "contact_book_bench"
harness = false
