[package]
name = "webui-hyper-integration"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "webui-hyper-integration"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
webui-parser = { path = "../../../crates/webui-parser" }
webui-protocol = { path = "../../../crates/webui-protocol" }
webui-handler = { path = "../../../crates/webui-handler" }
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["http1", "http2", "server-auto", "tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
console = "0.15"

[workspace]
