[package]
name = "webui-rust-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "webui-rust-example"
path = "src/main.rs"

[dependencies]
serde_json = { workspace = true }
webui-protocol = { path = "../../../crates/webui-protocol" }
webui-handler = { path = "../../../crates/webui-handler" }
anyhow = { workspace = true }
