[package]
name = "marketplace-api"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "marketplace-api"
path = "src/main.rs"

[dependencies]
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
mime_guess = { workspace = true }
thiserror = { workspace = true }
webui = { path = "..\\..\\..\\..\\crates\\webui" }
webui-handler = { path = "..\\..\\..\\..\\crates\\webui-handler" }
