[package]
name = "marketplace-api"
version = "3.0.0"
edition = "2021"
publish = false

[[bin]]
name = "marketplace-api"
path = "src/main.rs"

[dependencies]
actix-web = { workspace = true, features = ["compress-gzip", "rustls-0_23"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
mime_guess = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
html-escape = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
microsoft-webui = { path = "../../../../crates/webui" }
microsoft-webui-handler = { path = "../../../../crates/webui-handler" }

[lints]
workspace = true
