[package]
name = "streaming-browser-bench-server"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "streaming-browser-bench-server"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
microsoft-webui = { path = "../../../../crates/webui" }
microsoft-webui-handler = { path = "../../../../crates/webui-handler" }
actix-web = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
